# genai-hack-backend1

./: .gitignore  AUDIO_TTS_FIXES_SUMMARY.md  CREDENTIALS_SHARING.md  CRITICAL_DISCOVERY.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_SOCKET_FIXES.md  FINAL_FIXES_SUMMARY.md  GITHUB_WORKFLOW.md  IMAGE_GENERATION_FIXES.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  SLIDESHOW_DEBUG_FIX.md  SLIDESHOW_FIX_SUMMARY.md  STREAMING_MUSIC_README.md  gemini.md  main.py  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.py  start_server.py  test_frontend_integration.py  test_frontend_socket.html  test_socket_connection.html  test_streaming_music.py  test_voice_selection.py
config/: settings.py
frontend/: manga_slideshow.html  streamlit_app.py  streamlit_gcs_viewer.py  streamlit_synchronized_slideshow.py
models/: schemas.py
routers/: manga_router.py
services/: audio_service.py  dialogue_extractor.py  image_service.py  panel_processor.py  sequential_story_service.py  storage_service.py  story_service.py  streaming_parser.py
utils/: gemini_sa_test.py  genai_llm_test.py  helpers.py  retry_helpers.py  socket_utils.py  test_all_audio.py  test_all_services.py  test_audio_service.py  test_background_music.py  test_chirp_tts.py  test_complete_pipeline.py  test_complete_story.py  test_existing_story.py  test_image_service.py  test_image_upload.py  test_personalized_story.py  test_simple_tts.py  test_storage_service.py  test_story_service.py  test_tts_service.py  test_typography_generation.py  test_voice_selection.py
workflows/: manga_workflow.py
